--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "dev": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
+  },
+  "jest": {
+    "verbose": true
   },
   "dependencies": {
     "expo": "~45.0.0",
@@ -20,8 +25,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/jest": "^28.1.6",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
+    "jest": "^28.1.3",
+    "ts-jest": "^28.0.7",
     "typescript": "~4.3.5"
   },
   "private": true
