--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "verbose": true
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
@@ -29,6 +30,7 @@
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
     "jest": "^28.1.3",
+    "jest-mock-axios": "^4.6.1",
     "ts-jest": "^28.0.7",
     "typescript": "~4.3.5"
   },
